@@ -10,6 +10,8 @@ systemd System and Service Manager
     - remove EXEC_OUTPUT_SYSLOG_AND_CONSOLE type output;
     - remove EXEC_OUTPUT_JOURNAL_AND_CONSOLE type output;
     - redirect stdout to syslog if type output is syslog or journal;
+ * tools:
+    - remove check-includes perl script;
 
    systemd (214.5)
 ~~~~~~~
